# trunk-yls

./: LICENSE  README.md  plugin.yaml  pyproject.toml  yls-check.sh
.github/: renovate.json5
.github/workflows/: publish.yaml
src/trunk-yls/: yls-check.py
src/trunk_yls/: yls_check.py
